design patterns and stream homework